testsuite/tests/typecheck/should_fail/tcfail113.stderr

tcfail113.hs:12:7: error:
    Expecting one more argument to ‘Maybe’
    Expected kind ‘*’, but ‘Maybe’ has kind ‘* -> *’
    In the type signature: f :: [Maybe]

tcfail113.hs:15:8: error:
    The first argument of ‘T’ should have kind ‘* -> *’,
      but ‘Int’ has kind ‘*’
    In the type signature: g :: T Int

tcfail113.hs:18:6: error:
    ‘Int’ is applied to too many type arguments
    In the type signature: h :: Int Int
